검색개요 페이지 추가

--- a/css/scss/helpers/_mixins.scss
+++ b/css/scss/helpers/_mixins.scss
@@ -7,8 +7,10 @@ $col363: #363F4B;
 $col6A7: #6A727B;
 $col969: #969EA7;
 $colC7C: #C7CCD1;
-$colup: #dd5257;
-$coldown: #404fc3;
+// $colup: #dd5257;
+// $coldown: #404fc3;
+$colup: #ff0000;
+$coldown: #000cff;
 $colF5F: #F5F5F9;
 $colF5F5F5: #F5F5F5;
 $colEDE: #EDEEEF;
