--- a/css/scss/layout/_grid.scss
+++ b/css/scss/layout/_grid.scss
@@ -43,9 +43,9 @@ body, #wrap {
     }
 }
 
-#footer {    
-    padding: 40px 16px 25px;
-}
+// #footer {    
+//     padding: 40px 16px 25px;
+// }
 
 
 // input
