--- a/css/scss/super_stock.scss
+++ b/css/scss/super_stock.scss
@@ -4,13 +4,13 @@
 
 @import "layout/grid"; // 그리드
 @import "layout/header"; // 헤더
-@import "layout/footer"; // 푸터
+// @import "layout/footer"; // 푸터
 
 @import "pages/home"; // 메인
 @import "pages/search"; // 검색
-@import "pages/stock"; // AI추천
+// @import "pages/stock"; // AI추천
 @import "pages/modal"; // 회원(로그인, 회원가입, 결제, 유료서비스 팝업)
-@import "pages/service"; // 서비스 소개
+// @import "pages/service"; // 서비스 소개
 // @import "layout/themes"; //라이트, 다크모드 테마 적용
 
 // Typography
