메인 달려라 미국주식 적용 완료

--- a/css/scss/helpers/_mixins.scss
+++ b/css/scss/helpers/_mixins.scss
@@ -34,6 +34,7 @@ $cold6d : #d6d6d6;
 
 
 @mixin themeLight { //라이트테마 칼라
+    --Title: "Pretendard Variable", "Pretendard";
     --background-base: #F4F4F5;
     --signalbuy : #FF4500;    
     --signalhold : #008000;    
@@ -117,10 +118,6 @@ $default-padding: 0px;
 $default-margin: 0px;
 $default-fontfamily:  "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 
-@mixin font-family {
-    font-family: $default-fontfamily;
-    line-height: normal;
-}
 
 @mixin pad($n: $default-padding) {
     padding: $n;
@@ -205,250 +202,6 @@ $default-fontfamily:  "Pretendard Variable", Pretendard, -apple-system, BlinkMac
     }
 }
 
-@mixin listswiper {
-    .list_area .list .title a {
-        @include white-space;
-        font-size: $font16;
-        font-weight: $f_sizeB;
-        
-        color: $col222;
-    }
-
-    .list_area .list .detail {
-        padding-top: 4px;
-        line-height: 0.85;
-
-        span {
-            font-size: $font12;
-            
-            color: $col898;
-        }
-    }
-
-    .list_area .list .num {
-        display: flex;
-        justify-content: space-between;
-
-    }
-
-    .list_area .list .num .th {
-        display: block;
-        font-size: $font12;
-        line-height: 1.5;
-        
-        color: $col898;
-    }
-
-    .list_area .list .num .td {
-        font-size: $font16;
-        line-height: 1.5;
-        
-        color: $col222;
-    }
-
-    .list_area .list .num .td b {
-        font-weight: $f_sizeB;
-    }
-
-    .list_area .list .num .trans {
-        display: inline-block;
-        text-align: center;
-        border-radius: 3px;
-        font-size: 10px;
-        line-height: 1.5;
-        
-        color: $colfff;
-        min-width: 38px;
-        padding: 3px 5px 2px;
-        box-sizing: border-box;
-        vertical-align: middle;
-        margin-left: 3px;
-
-        &.nice {
-            background-color: #c22c06;
-        }
-
-        &.gro {
-            background-color: #63bcb9;
-        }
-
-        &.turn {
-            background-color: #e6a01c;
-        }
-
-    }
-
-}
-
-// 검색바, 검색 자동완성
-@mixin searchArea {
-    .main_searching .searchArea {
-        margin: 0 auto;
-        position: relative;
-        text-align: right;
-    }
-
-    .main_searching .searchArea.keydown form {
-        margin-left: 0;
-    }
-
-    .main_searching .searchArea.keydown .searchInput {
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-    }
-
-    .main_searching .searchArea .sch_title {
-        color: #333;
-        font-size: 1.25rem;
-        font-weight: $f_sizeB;
-        text-align: left;
-        display: inline-block;
-        width: 45px;
-        line-height: 33px;
-    }
-
-    .main_searching .searchArea .sch_title.keydown {
-        display: none;
-    }
-
-    .main_searching .searchArea .searchInput {
-        width: 100%;
-        padding: 13px 16px 12px 40px;
-        border: 1px solid $colEDE;
-        -webkit-box-sizing: border-box;
-        box-sizing: border-box;        
-        outline: none;
-        border-radius: 8px;
-        background-color: $colfff;              
-        font-size: $font16;
-        // font-weight: $f_sizeB;
-        line-height: 1.05;
-        color: $col181;        
-        &::placeholder {
-            color: $colC7C;
-            font-size: $font16;
-        }
-        &:hover, &:focus {
-            border-color: $col4D6;
-        }
-    }
-
-    .main_searching .searchArea .searchInput.keydown {
-        width: 100%;
-        padding: 0 16px 0 34px;
-        border-radius: 10px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        border: 1px solid #EDEEEF;
-    }
-
-    .main_searching .searchArea .searchBtn {
-        display: inline-block;
-        width: 18px;
-        height: auto;
-        position: absolute;
-        left: 13px;
-        top: 16px;
-    }
-
-    .main_searching .sch_autocomplete {        
-        border-bottom-left-radius: 8px;
-        border-bottom-right-radius: 8px;        
-        // display: none;
-        opacity: 0;
-        height: 0;
-        overflow: auto;
-        // height: 100%;
-        margin: 0 auto;
-        background-color: $colfff;
-    }
-
-    .main_searching .sch_autocomplete.focus_on {
-        // display: block;
-        opacity: 1;
-        height: auto;
-        transition: all 0.3s;
-    }
-
-    .main_searching .sch_autocomplete._show {
-        // display: block;
-        opacity: 1;
-        height: auto;
-        transition: all 0.3s;
-    }
-
-    .main_searching .sch_autocomplete ul {
-        border-top: 0;
-        border-bottom-right-radius: 8px;
-        border-bottom-left-radius: 8px;
-    }
-
-    .main_searching .sch_autocomplete ul li {
-        padding: 4px 16px;
-        border: 1px solid $col4D6;
-        border-top: none;
-        border-bottom: none;
-        &:first-child {
-            padding-top: 15px;
-        }
-    }
-
-    .main_searching .sch_autocomplete ul li:last-child {
-        padding-bottom: 15px;
-        border-bottom-left-radius: 8px;
-        border-bottom-right-radius: 8px;
-        border-bottom: 1px solid $col4D6;
-    }
-
-    .main_searching .sch_autocomplete ul li a {        
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        font-size: $font20;
-        font-weight: $f_sizeB;
-        line-height: 1.05;
-        color: $col181;
-    }
-
-    .main_searching .sch_autocomplete ul li a._on {
-        border: none;
-        padding: 0;
-    }
-
-    .main_searching .sch_autocomplete ul li a .schCode {
-        width: 65px;
-        font-size: $font14;
-        font-weight: $f_sizeB;        
-        
-    }
-
-    .main_searching .sch_autocomplete ul li a .schList {
-        display: inline-block;
-        width: 100%;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        font-size: $font14;                
-    }
-
-    .main_searching .sch_autocomplete ul li a .schList strong {        
-        font-weight: $f_sizeB;
-    }
-
-    .main_searching .no_result {
-        border: 1px solid $col4D6;
-        border-top: none;
-        padding: 30px 15px;
-        text-align: center;
-    }
-
-    .main_searching .no_result p,
-    .main_searching .no_result p strong {
-        color: #939393;
-    }
-
-}
-
 // 더보기
 @mixin btn_more {
     .btn_more {
@@ -483,51 +236,6 @@ $default-fontfamily:  "Pretendard Variable", Pretendard, -apple-system, BlinkMac
             opacity: 1;
         }        
     }
-}
-
-// 탭메뉴
-@mixin tabsArea {
-    .tabs {
-        display: flex;
-        justify-content: space-between;        
-        width: 100%;
-        box-sizing: border-box;    
-        border-radius: 0;
-        border: none;
-        padding: 0;
-        border-bottom: 1px solid $colEDE;        
-        li {
-            flex: 1;
-            padding: 5px 0 12px;
-            box-sizing: border-box;
-            flex: 2;
-            text-align: center;
-            position: relative;
-            top: 1px;
-            cursor: pointer;
-
-            span {
-                font-size: $font16;
-                font-weight: $f_sizeN;                
-                color: $col6A7;
-                padding: 5px 10px 10px;
-            }
-
-            &.active {
-                span {                    
-                    font-weight: $f_sizeB;                    
-                    color: $col363;
-                    border-bottom: 2px solid $col363;
-                }
-            }
-        }
-    }
-
-    .tab_container {
-        // padding: 24px 15px 0;
-        padding: 24px 0 0;
-    }
-
 }
 
 // 관심종목 하트
@@ -579,27 +287,6 @@ $default-fontfamily:  "Pretendard Variable", Pretendard, -apple-system, BlinkMac
         }
     }
 }
-
-/* 텍스트 필터 */
-.btn_free {
-    display: flex !important;    
-}
-
-.remark {
-    display: flex;
-    align-items: center;
-    gap: 3px;
-    padding-left: 7px;
-}
-
-.remark i {
-    width: 11px;
-    height: 11px;
-    opacity: 0.67;
-    border-radius: 50%;
-    background-color: $col6A7;
-}
-
 // 테이블 기본
 @mixin table {    
     border: 0;        
@@ -631,132 +318,3 @@ $default-fontfamily:  "Pretendard Variable", Pretendard, -apple-system, BlinkMac
 
 }
 
-// 퀀트 전략 박스
-@mixin quantbox {
-    background-color: $colfff;
-    border-radius: 16px;
-    padding: 20px 20px;
-    box-sizing: border-box;
-}
-
-// 퀀드 전략 생성 중 로딩 이미지
-#loading-overlay {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;    
-    // display: none;
-    z-index: 98;
-    // opacity: 0;
-
-    .lodingSwiper {
-        width: 100%;
-        padding-bottom: 32px;
-    }
-
-    #animationWindow {
-        width: auto;
-        height: 200px;
-    }
-
-    .loading_txt {        
-        position: relative;                
-    }
-    
-    .dot_animation {
-        position: relative;
-        display: inline-block;
-        left: 6px;
-        width: 5px;
-        height: 5px;
-        border-radius: 50%;
-        background-color: $col181;
-        animation-name: dot;
-        animation-duration: 1s;
-        animation-iteration-count: infinite;
-        animation-timing-function: linear;                
-      }
-      
-      .dot_animation:nth-child(1) {
-        left: 6px;
-        animation-delay: 0.6s;
-      }
-      
-      .dot_animation:nth-child(2) {
-        left: 12px;
-        animation-delay: 0.8s;
-      }
-      
-      .dot_animation:nth-child(3) {
-        left: 18px;
-        animation-delay: 1s;
-      }
-      
-      @keyframes dot {
-        0% {
-          opacity: 0.3;
-          transform: translateX(-10%) scale(0);
-        }
-        50% {
-          opacity: 1;
-          transform: translateX(0%) scale(1);
-        }
-        100% {
-          opacity: 0.3;
-          transform: translateX(0%) scale(0);
-        }
-      }
-      
-
-    .loading_txt {
-        font-size: $font18;
-        font-weight: $f_sizeB;        
-        line-height: 1.28;        
-        color: $col181;
-    }
-    .box {
-        width: 80%;        
-        margin: 24px auto;
-        padding: 24px 20px 0;
-        border: 1px solid $colEDE;
-        border-radius: 16px;
-
-        .title {
-            display: inline-flex;
-            background-color: #f1f1f8;
-            padding: 3px 7px;
-            border-radius: 100px;        
-            font-size: $font12;
-            font-weight: $f_sizeS;        
-            line-height: 1.17;
-            letter-spacing: -0.3px !important;
-            text-align: center;
-            color: #656b71;                
-        }
-        .saying {
-            margin-top: 20px;
-            font-size: $font16;
-            font-weight: $f_sizeB;        
-            line-height: 1.31;        
-            color: $col363;
-        }
-        .name {
-            display: block;
-            margin-top: 8px;
-            width: 100%;
-            box-sizing: border-box;        
-            font-size: 13px;        
-            line-height: 1.46;        
-            text-align: left;
-            color: $col6A7;
-        }
-
-    }
-    
-}
