--- a/css/scss/layout/_grid.scss
+++ b/css/scss/layout/_grid.scss
@@ -230,385 +230,9 @@ a:active {
 }
 
 //달력
-.ui-widget {
-    @include font-family;
-}
+// .ui-widget {
+//     @include font-family;
+// }
 .hasDatepicker {
     cursor: pointer;
-}
-.ui-datepicker-trigger {
-    position: relative;
-    border: none;
-    background-color: transparent;
-    width: 9px;
-    height: 18px;
-
-    &::after {
-        content: "";
-        position: absolute;
-        right: 4px;
-        top: 4px;
-        display: inline-block;
-        width: 4px;
-        height: 4px;
-        border-top: 2px solid var(--coldae);
-        border-right: 2px solid var(--coldae);
-        transform: rotate(135deg);
-    }
-}
-
-.ui-datepicker-next:active {
-    left: auto;
-}
-.ui-datepicker-next:active {
-    left: auto;
-}
-
-.ui-widget-header {
-    border: 0px solid #dddddd;
-    background: #fff;
-}
-
-.ui-datepicker-calendar>thead>tr>th {
-    font-size: $font13 !important;
-}
-
-.ui-datepicker .ui-datepicker-header {
-    position: relative;
-    padding: 20px 0;   
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    background-color: $colF5F;
-}
-
-.ui-state-default,
-.ui-widget-content .ui-state-default {
-    margin: 10px auto 0;
-    border: 0px solid #c5c5c5;
-    background-color: transparent;
-    font-weight: $f_sizeN;
-    color: $col363;
-    text-align: center;
-    line-height: 26px;
-    margin: 0 auto 10px !important;
-}
-
-.ui-widget-content {
-    border: none;    
-}
-.ui-datepicker .ui-datepicker-buttonpane button.ui-datepicker-current {
-    display: none;
-}
-.ui-datepicker .ui-datepicker-buttonpane button {
-    position: absolute;
-    right: 13px !important;
-    top: 13px !important;    
-    cursor: pointer;
-    position: absolute;
-    display: inline-block;
-    padding: 4px;
-    width: 24px;
-    height: 24px;
-    right: 4px;
-    top: 10px;    
-}
-
-.ui-datepicker .ui-datepicker-buttonpane button::before,
-.ui-datepicker .ui-datepicker-buttonpane button::after {
-    content: '';
-    position: absolute;
-    right: 15px;
-    top: 0;
-    height: 24px;
-    width: 2px;
-    background-color: $col181;
-}
-
-.ui-datepicker .ui-datepicker-buttonpane button::before {
-    transform: rotate(45deg);
-}
-
-.ui-datepicker .ui-datepicker-buttonpane button::after {
-    transform: rotate(-45deg);
-}
-
-
-
-
-
-
-
-.ui-datepicker-current-day .ui-state-active,
-.ui-datepicker-today .ui-state-active {
-    text-align: center;    
-    color: $colfff;
-    background-color: $col4D6;
-    border-radius: 50%;
-    width: 32px;
-    height: 32px;
-    box-sizing: border-box;
-}
-
-.ui-datepicker .ui-datepicker-title {
-    margin: 0 0em;
-    line-height: 16px;
-    text-align: center;
-    font-size: $font20;
-    padding: 0px;
-    font-weight: $f_sizeB;
-}
-.ui-datepicker .ui-datepicker-title span {
-    font-size: $font20;    
-    font-weight: $f_sizeB;    
-}
-
-.ui-datepicker {        
-    position: fixed !important;
-    top: 50% !important;
-    left: 50% !important;
-    margin-left: 3%;
-    z-index: 99 !important;
-    width: 94%;
-    max-width: 380px;
-    margin: 0 auto !important;
-    box-sizing: border-box;
-    transform: translate(-50%, -50%);
-    display: none;
-    background-color: #fff;
-    border-radius: 15px;    
-    padding: 0 16px;
-    padding-bottom: 10px;
-    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.44);
-    &::before {
-        content: '기준 날짜 선택';
-        display: block;
-        padding: 24px 0;
-        font-size: 20px;
-        font-weight: $f_sizeB;        
-        line-height: 1.2;        
-        text-align: center;
-        color: $col181;
-    }
-    &::after {
-        content: '최대 3개월까지 날짜별 종목을 조회할 수 있어요.';
-        display: block;
-        padding: 10px 0;
-        font-size: 13px;        
-        line-height: 1.46;
-        letter-spacing: -0.33px !important;
-        text-align: center;
-        color: #6a727b;
-
-    }
-}
-
-.ui-widget.ui-widget-content {
-    border: 1px solid #eee;
-}
-
-#datepicker:focus>.ui-datepicker {
-    display: block;
-}
-
-.ui-datepicker-prev,
-.ui-datepicker-next {
-    cursor: pointer;
-    top: 16px !important;
-}
-
-.ui-datepicker-prev {
-    left: 10px !important;    
-}
-.ui-datepicker-next {
-    float: right;
-    right: 10px !important;
-}
-
-.ui-state-disabled {
-    cursor: auto;
-    color: hsla(0, 0%, 80%, 1);
-}
-
-.ui-datepicker-title {
-    text-align: center;
-    padding: 10px;
-    font-weight: 100;
-    font-size: 20px;
-}
-
-.ui-datepicker-calendar {
-    width: 100%;    
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
-    background-color: $colF5F;
-}
-
-.ui-datepicker-calendar>thead>tr>th {
-    padding: 5px;
-    font-size: 20px;
-    font-weight: 400;
-}
-
-.ui-datepicker-calendar>tbody>tr>td>a {
-    font-weight: $f_sizeN;
-    color: $col363;
-    font-size: $font15 !important;    
-    text-decoration: none;
-}
-
-.ui-datepicker-calendar>tbody>tr>.ui-state-disabled:hover {
-    cursor: auto;
-    background-color: #fff;
-}
-
-.ui-datepicker-calendar>tbody>tr>td {
-    border-radius: 100%;
-    width: 60px;
-    height: 40px;
-    vertical-align: middle;
-    cursor: pointer;    
-    text-align: center;    
-}
-
-.ui-datepicker-calendar>tbody>tr>td:hover {
-    background-color: transparent;
-    opacity: 0.6;
-}
-
-
-.ui-widget-header .ui-icon {
-    background: none;    
-    width: 20px;
-    height: 20px;
-}
-.ui-datepicker .ui-datepicker-prev span {    
-    display: inline-block;
-    width: 12px;
-    height: 12px;
-    border-top: 2px solid #C7CCD1;
-    border-right: 2px solid #C7CCD1;
-    transform: rotate(-135deg);
-    border-color: var(--cold9e) !important;    
-}
-.ui-datepicker .ui-datepicker-next span {
-    display: inline-block;
-    width: 12px;
-    height: 12px;
-    border-top: 2px solid #C7CCD1;
-    border-right: 2px solid #C7CCD1;
-    transform: rotate(45deg);
-    border-color: var(--cold9e) !important;    
-
-}
-.ui-icon-circle-triangle-e {
-    background-position: -20px 0px;
-    background-size: 36px;
-}
-
-.ui-icon-circle-triangle-w {
-    background-position: -0px -0px;
-    background-size: 36px;
-}
-
-.ui-datepicker-calendar>tbody>tr>td:first-child a {
-    color: $colup !important;
-}
-
-.ui-datepicker-calendar>tbody>tr>td:last-child a {
-    color: $coldown !important;
-}
-
-.ui-datepicker-calendar>thead>tr>th:first-child,
-.ui-datepicker-calendar>thead>tr>th:first-child span {
-    color: $colup !important;
-}
-
-.ui-datepicker-calendar>thead>tr>th:last-child,
-.ui-datepicker-calendar>thead>tr>th:last-child span {
-    color: $coldown !important;
-}
-
-
-
-.inp {
-    padding: 10px 10px;
-    background-color: #f1f1f1;
-    border-radius: 4px;
-    border: 0px;
-}
-
-.inp:focus {
-    outline: none;
-    background-color: #eee;
-}
-
-// gnb
-.gnb {    
-    position: fixed;
-    max-width: 766px;    
-    margin: 0 auto;
-    width: 100%;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: $colfff;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;    
-    gap: 10px;
-    box-shadow: 0 -5px 10px 0 rgba(0, 0, 0, 0.03);    
-    z-index: 97;
-
-    a, span {
-        cursor: pointer;
-        display: inline-flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        gap: 2px;
-        font-size: $font12;              
-        font-weight: $f_sizeN;  
-        line-height: 1.45;        
-        color: $col969;
-        padding: 10px 0 5px;
-        &::before {
-            content: '';
-            display: inline-block;
-            width: 20px;
-            height: 20px;
-        }        
-        &.active {
-            color: $col4D6;                        
-            &::before  {
-                background-position: bottom center !important;
-            }                
-        }        
-        &.home {
-            &::before  {
-                background: url('/img/gnb_home.svg') no-repeat top center;            
-            }
-        } 
-        &.sch {
-            &::before  {
-                background: url('/img/gnb_sch.svg') no-repeat top center;            
-            }
-        } 
-        &.quant {
-            &::before  {
-                background: url('/img/gnb_quant.svg') no-repeat top center;            
-            }
-        } 
-        &.menu {
-            &::before  {
-                background: url('/img/gnb_menu.svg') no-repeat top center;            
-            }
-        } 
-    }
-}
-
-@media screen and (max-height: 100%) {
-    #wrap {
-        min-height: 100vh;
-        background-color: red !important;
-    }
 }
