--- a/css/scss/super_stock.scss
+++ b/css/scss/super_stock.scss
@@ -14,5 +14,6 @@
 // @import "layout/themes"; //라이트, 다크모드 테마 적용
 
 // Typography
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css");
 
 
